fix offset and home side image

--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
             <span class="animate" style="--i:6;"></span>
         </div>
 
-        <div class="home-imgHover"><span class="animate" style="--i:5;"></span></div>
+        <div class="side-image">
+            <img src="/imagenes/perfil3.jpg" alt="ManelAboutPicture">
+            <span class="animate" style="--i:5;"></span>
+        </div>
 
     </section>
 
