homeimg second try

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
 
         <div class="side-image">
-            <img src="/imagenes/perfil3.jpg" alt="ManelAboutPicture">
+            <img src="/imagenes/perfil2.jpg" alt="homeAsidePicture">
             <span class="animate" style="--i:5;"></span>
         </div>
 
